--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^8.0.1",
+    "@angular/cdk-experimental": "^8.1.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "^8.0.3",
