--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~9.0.0-rc.8",
     "@auth0/auth0-spa-js": "^1.1.0",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.15",
+    "ng-click-outside": "^6.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
