--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
     "@angular/platform-browser-dynamic": "~9.0.0-rc.8",
     "@angular/router": "~9.0.0-rc.8",
     "@auth0/auth0-spa-js": "^1.1.0",
+    "auth0-js": "^9.12.2",
+    "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.7.0",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.5",
     "ng-click-outside": "^6.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -33,7 +40,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.0-rc.9",
     "@angular/cli": "~9.0.0-rc.8",
-    "@angular/compiler-cli": "~9.0.0-rc.8",
+    "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "~9.0.0-rc.8",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -41,7 +48,7 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
