--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path dist"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.0-rc.8",
     "@angular/cdk": "^9.0.0-rc.7",
     "@angular/cdk-experimental": "^8.1.2",
+    "@angular/cli": "~9.0.0-rc.8",
+    "@angular/compiler-cli": "^9.0.7",
     "@angular/common": "~9.0.0-rc.8",
     "@angular/compiler": "~9.0.0-rc.8",
     "@angular/core": "^9.0.0-rc.8",
@@ -39,8 +42,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.0-rc.9",
-    "@angular/cli": "~9.0.0-rc.8",
-    "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "~9.0.0-rc.8",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
