--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/animations": "^9.0.0-rc.8",
     "@angular/cdk": "^9.0.0-rc.7",
     "@angular/cdk-experimental": "^8.1.2",
-    "@angular/cli": "~9.0.0-rc.8",
+    "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/common": "~9.0.0-rc.8",
     "@angular/compiler": "~9.0.0-rc.8",
