--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@angular/cdk": "^9.0.0-rc.7",
     "@angular/cdk-experimental": "^8.1.2",
     "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.0.7",
     "@angular/common": "~9.0.0-rc.8",
     "@angular/compiler": "~9.0.0-rc.8",
+    "@angular/compiler-cli": "^9.0.7",
     "@angular/core": "^9.0.0-rc.8",
     "@angular/forms": "~9.0.0-rc.8",
     "@angular/material": "^9.0.0-rc.7",
@@ -35,6 +35,7 @@
     "express-jwt": "^5.3.1",
     "jwks-rsa": "^1.7.0",
     "lodash": "^4.17.15",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.5",
     "ng-click-outside": "^6.0.0",
     "rxjs": "~6.5.4",
